tests/cases/generics/ok/generic-angle-call-index.ari
fn identity[T](value: T) -> T {
  value
}

struct Box[T] {
  value: T,
}

fn main() -> i64 {
  let item = Box<i64> { value: 4 };
  identity<i64>(10) + item.value + [7, 8, 9][1]
}
