tests/cases/generics/errors/generic-specialization-name-conflict.ari
fn identity[T](value: T) -> T {
  return value;
}

fn identity__G_i64(value: i64) -> i64 {
  return value + 1;
}

fn main() -> i64 {
  return identity<i64>(1);
}
